--- a/backend/package.json
+++ b/backend/package.json
@@ -6,16 +6,17 @@
   "scripts": {
     "clean:backend": "rm -rf build",
     "tsc": "npm run clean:backend && tsc && tsc-alias",
-    "dev": "tsnd --respawn -r tsconfig-paths/register index.ts",
+    "dev": "cross-env NODE_ENV=development tsnd --respawn -r tsconfig-paths/register index.ts",
     "lint": "eslint --ext .ts .",
     "format": "prettier --write .",
-    "start": "node .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "cross-env NODE_ENV=production node .",
+    "test": "cross-env NODE_ENV=test jest --verbose --runInBand"
   },
   "author": "Jack",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.1.0",
@@ -24,11 +25,16 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.1",
     "@types/morgan": "^1.9.4",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
     "eslint": "^8.39.0",
+    "jest": "^29.5.0",
     "prettier": "2.8.8",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.0",
     "ts-node-dev": "^2.0.0",
     "tsc-alias": "^1.8.6",
     "tsconfig-paths": "^4.2.0",
