--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "clean": "rm -rf build",
     "build": "npm run clean && tsc && tsc-alias",
     "dev": "cross-env NODE_ENV=development tsnd --respawn -r tsconfig-paths/register index.ts",
+    "dev:debug": "cross-env NODE_ENV=development tsnd --preserve-symlinks --transpile-only --inspect=0.0.0.0:9229 --project tsconfig.json --respawn -r tsconfig-paths/register index.ts",
     "lint": "eslint --ext .ts .",
     "format": "prettier --write .",
     "start": "cross-env NODE_ENV=production node .",
