--- a/backend/package.json
+++ b/backend/package.json
@@ -2,31 +2,43 @@
   "name": "tackleit-api",
   "version": "1.0.0",
   "description": "Todo items API for Tackle It app",
-  "main": "index.js",
+  "main": "build/index.js",
   "scripts": {
-    "tsc": "tsc",
-    "dev": "tsnd --respawn -r tsconfig-paths/register index.ts",
+    "clean": "rm -rf build",
+    "build": "npm run clean && tsc && tsc-alias",
+    "dev": "cross-env NODE_ENV=development tsnd --respawn -r tsconfig-paths/register index.ts",
+    "dev:debug": "cross-env NODE_ENV=development tsnd --preserve-symlinks --transpile-only --inspect=0.0.0.0:9229 --project tsconfig.json --respawn -r tsconfig-paths/register index.ts",
     "lint": "eslint --ext .ts .",
     "format": "prettier --write .",
-    "start": "node build/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "cross-env NODE_ENV=production node .",
+    "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
+    "test:debug": "cross-env NODE_ENV=test node --inspect-brk=0.0.0.0 node_modules/.bin/jest --testTimeout=100000000 --runInBand"
   },
   "author": "Jack",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^7.1.0"
+    "mongoose": "^7.1.0",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.1",
+    "@types/morgan": "^1.9.4",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
     "eslint": "^8.39.0",
+    "jest": "^29.5.0",
     "prettier": "2.8.8",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.0",
     "ts-node-dev": "^2.0.0",
+    "tsc-alias": "^1.8.6",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.0.4"
   }
