--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -15,4 +15,8 @@ jobs:
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
+      - name: Build Docker images
+        run: docker compose up -d --build
+      - name: Run backend tests
+        run: docker compose exec backend npm test
       - run: echo "🍏 This job's status is ${{ job.status }}."
