--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -17,7 +17,7 @@ jobs:
           ls ${{ github.workspace }}
       - name: 'Create env file'
         run: |
-          echo "${{ secrets.ENV_FILE }}" > backend/.env
+          echo "${{ secrets.ENV_FILE }}"
       - name: Build Docker images
         run: docker compose up -d --build
       - name: Run backend tests
