--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -17,12 +17,12 @@ jobs:
           ls ${{ github.workspace }}
       - name: 'Create env file'
         run: |
-          echo "${{ secrets.ENV_FILE }}" > backend/.env
-      - name: Build Docker images
-        run: docker compose up -d --build
+          echo "NO SEE\n" > backend/.env && echo "${{ secrets.ENV_FILE }}" >> backend/.env
       - name: Debug
         run: cat backend/.env
       - run: echo ${{secrets.ENV_FILE}} | sed 's/./& /g'
+      - name: Build Docker images
+        run: docker compose up -d --build
       - name: Run backend tests
         run: docker compose exec backend npm test
       - run: echo "🍏 This job's status is ${{ job.status }}."
