--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -17,7 +17,7 @@ jobs:
           ls ${{ github.workspace }}
       - name: 'Create env file'
         run: |
-          echo "NO SEE\n" > backend/.env && echo "${{ secrets.ENV_FILE }}" >> backend/.env
+          echo "Hello=world\n" > backend/.env && echo "${{ secrets.ENV_FILE }}" >> backend/.env
       - name: Debug
         run: cat backend/.env
       - name: Build Docker images
