--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -5,18 +5,14 @@ jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
       - name: Check out repository code
         uses: actions/checkout@v3
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
       - name: Create .env file
-        run: echo "Have to create a separate secret for each I think ;("
+        run: |
+          echo "${{ secrets.MONGODB_URI }}" >> backend/.env
+          echo "${{ secrets.TEST_MONGODB_URI }}" >> backend/.env
+          echo "${{ secrets.MONGO_INITDB_ROOT_USERNAME }}" >> backend/.env
+          echo "${{ secrets.MONGO_INITDB_ROOT_PASSWORD }}" >> backend/.env
       - name: Build Docker images
         run: docker compose up -d --build
       - name: Run backend tests
