Finalize GitHub Action run

--- a/.github/workflows/tackleit-api-tests.yml
+++ b/.github/workflows/tackleit-api-tests.yml
@@ -1,5 +1,5 @@
-name: GitHub Actions Demo
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
+name: TackleIt API Tests
+run-name: Run backend tests 🚀
 on: [push]
 jobs:
   Explore-GitHub-Actions:
