--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -20,8 +20,7 @@
     "noFallthroughCasesInSwitch": true,
 
     "paths": {
-      "@/*": ["./src/*"],
-      "@public/*": ["./public/*"]
+      "@/*": ["./src/*"]
     }
   },
   "include": ["src"],
