--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -23,6 +23,6 @@
   },
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "project": "backend/tsconfig.json"
+    "project": "./tsconfig.json"
   }
 }
